--- a/app/src/main/res/layout/activity_rec_auditive.xml
+++ b/app/src/main/res/layout/activity_rec_auditive.xml
@@ -1,155 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/notePlaceholder"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <RelativeLayout android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-        <ImageView
-            android:id="@+id/pianoKeyboard"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
-
-        <RelativeLayout
-            android:id="@+id/note_g"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="47dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/note_g_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_g"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/note_a"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="94dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_a"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/note_b"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="145dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_b"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:id="@+id/note_c"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="188dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_c"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/note_d"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="235dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_d"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:id="@+id/note_e"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="285dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_e"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:id="@+id/note_f"
-            android:layout_width="40dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="334dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="@string/note_f"
-                android:background="@drawable/button" />
-        </RelativeLayout>
-
-
+        <Button
+            android:id="@+id/skipButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="@string/exercice_skip"
+            android:textColor="@color/textColorAccent"
+            android:background="@drawable/button"/>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/notePlaceholder"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/musicnote_placeholder">
+
+
+        <ImageButton
+            android:id="@+id/replayButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:elevation="7dp"
+            android:scaleType="fitXY"
+            android:padding="5dp"
+            android:background="#ffffff"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp" />
+    </RelativeLayout>
+
+    <include
+        android:id="@+id/piano_keyboard"
+        layout="@layout/piano_keyboard" />
 
 </LinearLayout>
