ReconnaissanceNoteActivity et PreferenceActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#e91e63</color>
     <color name="textColorAccent">#ffffff</color>
+    <color name="colorSuccess">#cddc39</color>
+    <color name="colorError">#aaa</color>
 </resources>
