--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="textColorAccent">#ffffff</color>
     <color name="colorSuccess">#cddc39</color>
     <color name="colorError">#aaa</color>
+    <color name="exoRecAudio">#7986cb</color>
+    <color name="exoRecNote">#ff9800</color>
+    <color name="exoRecCord">#4db6ac</color>
+    <color name="exoCordTheory">#9575cd</color>
 </resources>
