--- a/app/src/main/res/layout/activity_chord_theory_end.xml
+++ b/app/src/main/res/layout/activity_chord_theory_end.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/exoRecAudio"
+    android:background="@color/exoChordTheory"
     android:padding="50dp">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="150dp"
-        android:src="@drawable/icon_ear"
-        android:contentDescription="icon ear"/>
+        android:src="@drawable/icon_knowledge"
+        android:contentDescription="icon note theory"/>
 
     <include
         android:id="@+id/exo_end"
