--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Hear a note and try to guess which one it is!"
+                    android:text="@string/subtitle_activity_rec_audio"
                     android:textColor="@color/textColorAccent"
                     android:gravity="center"
                     android:layout_marginTop="10dp"/>
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textColor="#000"
+                    android:textColor="@color/colorScore"
                     android:gravity="center"
                     android:layout_marginTop="10dp"/>
 
@@ -91,7 +91,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Guess the correct note on the partition !"
+                    android:text="@string/subtitle_activity_rec_note"
                     android:textColor="@color/textColorAccent"
                     android:gravity="center"
                     android:layout_marginTop="10dp"/>
@@ -101,7 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textColor="#000"
+                    android:textColor="@color/colorScore"
                     android:gravity="center"
                     android:layout_marginTop="10dp"/>
 
@@ -111,7 +111,7 @@
                 android:id="@+id/exercice_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/exoRecCord"
+                android:background="@color/exoRecChord"
                 android:orientation="vertical"
                 android:padding="20dp"
                 android:textColor="@color/textColorAccent">
@@ -119,14 +119,14 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="100dp"
-                    android:src="@drawable/icon_eye_cord" />
+                    android:src="@drawable/icon_eye_chord" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="@string/title_activity_rec_cord"
+                    android:text="@string/title_activity_rec_chord"
                     android:textAllCaps="true"
                     android:textColor="@color/textColorAccent"
                     android:textSize="20sp" />
@@ -136,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="Guess the correct cord on the partition !"
+                    android:text="@string/subtitle_activity_rec_chord"
                     android:textColor="@color/textColorAccent" />
 
                 <TextView
@@ -146,7 +146,7 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:text=""
-                    android:textColor="#000" />
+                    android:textColor="@color/colorScore" />
 
             </LinearLayout>
 
@@ -155,17 +155,17 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/exoCordTheory"
+                android:background="@color/exoChordTheory"
                 android:textColor="@color/textColorAccent"
                 android:padding="20dp">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="100dp"
-                    android:src="@drawable/icon_kwowledge"/>
+                    android:src="@drawable/icon_knowledge"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/title_activity_cord_theory"
+                    android:text="@string/title_activity_chord_theory"
                     android:textColor="@color/textColorAccent"
                     android:textSize="20sp"
                     android:textAllCaps="true"
@@ -174,7 +174,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Click on the keyboard to match the given cord !"
+                    android:text="@string/subtitle_activity_rec_chord"
                     android:textColor="@color/textColorAccent"
                     android:gravity="center"
                     android:layout_marginTop="10dp"/>
@@ -184,7 +184,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textColor="#000"
+                    android:textColor="@color/colorScore"
                     android:gravity="center"
                     android:layout_marginTop="10dp"/>
 
